# Taller-Colores

./: CMakeLists.txt  README.md  ex1.cpp  ex2.cpp  running_avg.cpp
Convex/: CMakeLists.txt
Convex/src/: main.cpp
LineasPuntos/: CMakeLists.txt
LineasPuntos/include/: filters.h
LineasPuntos/src/: filter_canny.cpp  filter_hough.cpp  filter_laplacian.cpp  filter_log.cpp  filter_scharr.cpp  filter_sobel.cpp  filter_sobel_magnitude.cpp  filter_utils.cpp  filter_utils.h  filter_zero_crossing.cpp  main.cpp
Rostros/: CMakeLists.txt  gmm_app  motion_detector
Rostros/include/: frame_diff.h  gmm_segmenter.h
Rostros/src/: frame_diff.cpp  gmm_segmenter.cpp  main_frame_diff.cpp  main_gmm.cpp
Satelite/: README.md  main_hist.cpp
Taller-2/: README.md  combined.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  frame_diff.cpp
